k8s/full-examples/whoami.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami-deployment
  namespace: whoami
  labels:
    app: whoami-app
spec:
  replicas: 2 #Specifies the desired number of replicas (instances) of the
  selector: # Specifies how the Deployment identifies which Pods to manage.
    matchLabels: # Specifies the labels that Pods must have to be managed by this Deployment.
      app: whoami-app
  template: # Specifies the pod template used to create new Pods.
    metadata:
      labels:
        app: whoami-app
    spec:
      containers:
      - name: whoami
        image: containous/whoami
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: whoami-service
  namespace: whoami
  labels:
    app: whoami-app
spec: # Specifies the specification of the Service, including its selector and ports.
  selector: # Specifies how the Service identifies which Pods to target.
    app: whoami-app # Selects Pods with the label
  type: NodePort
  ports:
    - protocol: TCP #Specifies the protocol used for the port (TCP or UDP).
      port: 80 # Specifies the port number on the Service itself.
      targetPort: 80 #Specifies the port number on the Pods targeted by the Service.

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: whoami
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: whoami.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami-service
                port:
                  number: 80
